add a version that works for some reason.

--- a/Anagram/Views/Home/Index.cshtml
+++ b/Anagram/Views/Home/Index.cshtml
@@ -1,71 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <title>Anagram Tester</title>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="~/css/styles.css">
-  </head>
+<head>
+  <meta charset='utf-8'>
+  <title>Anagram Tester</title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="~/css/styles.css">
+</head>
   <body>
     <div class="container well">
       <h1>Test An Anagram</h1>
-      <div class="row">
-        <form class="form" action="/" method="post">
-          <input type="number" name="qx" placeholder="Enter Queen's X">
-          <input type="number" name="qy" placeholder="Enter Queen's Y">
-          <input type="number" name="vx" placeholder="Enter Victim's X">
-          <input type="number" name="vy" placeholder="Enter Victim's Y">
+      <form class="form" action="/" method="post">
+        <div class="row">
+          <input type="text" name="our-word" placeholder="Enter a Keyword">
+        </div>
+        <div class="row">
+          <input type="text" name="their-list" placeholder="Enter a List of Words">
+        </div>
+        <div class="row">
           <button type="submit" class="btn btn-info" name="button">GO!</button>
-        </form>
-      </div>
-      @if(@Model["msg"].Length > 0)
+        </div>
+      </form>
+      @for (var i = 0; i < Model.Count; i++)
       {
-        var isWhite = true;
-        @for(var y = 1; y <= 8; y++)
-        {
-          <div class="row">
-          @for(var x = 1; x <= 8; x++)
-          {
-              @if(isWhite)
-              {
-                <div class="col-xs-1 whiteSquare">
-                  @if(x == @Model["qx"] && y == @Model["qy"])
-                  {
-                    <img src="~/img/queen.png" alt="queen">
-                  }
-                  @if(x == @Model["vx"] && y == @Model["vy"])
-                  {
-                    <img id="pawn" src="~/img/pawn.png" alt="pawn">
-                  }
-                </div>
-              }
-              else
-              {
-                <div class="col-xs-1 redSquare">
-                  @if(x == @Model["qx"] && y == @Model["qy"])
-                  {
-                    <img src="~/img/queen.png" alt="queen">
-                  }
-                  @if(x == @Model["vx"] && y == @Model["vy"])
-                  {
-                    <img id="pawn" src="~/img/pawn.png" alt="pawn">
-                  }
-                </div>
-              }
-              isWhite = !isWhite;
-
-          }
-          </div>
-
-          isWhite = !isWhite;
-        }
+        <h3>@Model[i]</h3>
       }
-
-      <h3>@Model["msg"]</h3>
-
-
-
-
     </div>
   </body>
 </html>
